--- a/client/src/App.css
+++ b/client/src/App.css
@@ -282,7 +282,8 @@ body {
   background-repeat: no-repeat;
   background-size: 110% 110%;
   background-position: 10% 18%;
-  filter: brightness(1.1) saturate(1.3) sepia(0.4) hue-rotate(15deg) contrast(1.15);
+  filter: brightness(1.1) saturate(1.3) sepia(0.4) hue-rotate(15deg)
+    contrast(1.15);
   z-index: -1;
 }
 
