--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -23,12 +23,13 @@
   background: url("../assets/lobby-bkg.webp") center/cover;
   opacity: 0.1;
   z-index: 0;
-  filter: sepia(0.5) brightness(1.5);
+  filter: sepia(0.4) brightness(1.1);
 }
 
 .lobby-header {
   padding: 1rem 2rem;
-  background: rgba(44, 24, 16, 0.9);
+  background: #121213;
+  opacity: 0.9;
   border-bottom: 2px solid #8b4513;
   position: relative;
   z-index: 1;
@@ -185,7 +186,8 @@
   gap: 0.75rem;
   width: 100%;
   padding: 1rem 0rem 1rem 0rem;
-  background: rgba(44, 24, 16, 0.9);
+  background: #121213;
+  opacity: 0.9;
   border-radius: 4px;
   z-index: 2;
   position: absolute;
@@ -335,7 +337,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgba(44, 24, 16, 0.9);
+  background: #121213;
+  opacity: 0.9;
   border-top: 2px solid #8b4513;
   position: relative;
   z-index: 1;
